kubernetes-monitoring/ingress-services/ingress-grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:  
      kubernetes.io/ingress.class: nginx
      kubernetes.io/tls-acme: "true"
      cert-manager.io/cluster-issuer: "letsencrypt-issuer"
      cert-manager.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - grafana.35.228.182.231.nip.io
    - prometheus.35.228.182.231.nip.io
    secretName: letsencrypt-grafana
  rules:
  - host: grafana.35.228.182.231.nip.io
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
  - host: prometheus.35.228.182.231.nip.io
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: 9090
